src/test/deca/codegen/valid/field.deca
// Description:
//    test du bloc vide
//
// Resultats:
//    2
//
// Historique:
//    cree le 08/01/2023

class A {
    int x = 1;
}

{
    A a = new A();
    a.x = 2;
    println(a.x);
}